--- a/1.html
+++ b/1.html
@@ -1,6 +1,9 @@
 ﻿<link rel="icon" href="yinyue.png"/>
+<meta name="viewport" content="width=device-width,user-scalable=0,initial-scale=1,maximum-scale=1">
+
 
 <title>热门活动</title>
+
 
 <h2>推荐活动&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>更多</b></h2>
 
